--- a/style.css
+++ b/style.css
@@ -100,26 +100,203 @@ header nav ul li a.active{
 
 /*PAGINA*/
 
-#desc{
+.parallax{
+    width: 100%;
+    height: auto;
+    background-image: url(img/fondo1.jpg);
+    background-attachment: fixed;
+    text-align: center;
+    
+}
+.parallax img{
+    width: 20%;
+    height: auto;
+    margin: auto;
+    margin-top: 70px;
+}
+.parallax h4{
+    color: black;
+    font-family: 'Alegreya Sans SC', sans-serif;
+    padding: 1em;
+    margin: 1em;
+}
+
+.parallax p{
+    background-color: rgba(250,250,250,0.4);
+    color: black;
+    font-family: 'Alegreya Sans SC', sans-serif;
+    padding: 1em;
+    margin: 1em;
+}
+
+#fnd{
+    
+    text-align: center;
+}
+.card{
+    background: white;
+    border: none;
+    margin: 0;
+    margin-bottom: 30px;
+    padding: 20px;
+    text-align: center;
+    width: 18rem;
+    height: 400px;
+    text-align: center;
+    border-radius: 0px;
+}
+
+.card i{
+    
+    font-size: 30px;
+    margin: 25px 0 20px 0;
+}
+.card ul{
+    list-style: none;
+    padding: 0;
+}
+.card-body{
+    width: 100%;
+    padding: 0px;
+}
+.card-body a{
+    color: #262626;
+    
+    
+}
+.card-body a:hover{
+    color: #5f72bd;
+    
+}
+.card-title{
+     line-height: 40px;
+    text-transform: uppercase;
+    font-weight: bold;
+    color: #262626;
+    text-decoration: none;
+    font-family: 'Alegreya Sans SC', sans-serif;
+    margin: 20px;
+    display: block;
+   
+}
+
+.card-subtitle{
+    line-height: 30px;
+    text-transform: uppercase;
+    font-weight: bold;
+    color: #616161;
+    text-decoration: none;
+    font-family: 'Alegreya Sans SC', sans-serif;
+    margin: 0px;
+    display: block;
+    
+    
+}
+
+.card a{
+    line-height: 30px;
+    text-transform: uppercase;
+    font-weight: bold;
+    color: #616161;
+    text-decoration: none;
+    font-family: 'Alegreya Sans SC', sans-serif;
+    margin: 0.75em;
+    padding: 0.75em;
+    display: block;
+    
+}
+
+
+
+.selec{
+    width: 50%;
+    height: 70px;
+    background-image: linear-gradient(to top, #a7a6cb 0%, #8989ba 52%, #8989ba 100%);
+    border: none;
+    margin: 1em;
+    padding: 1em;
+    
+}
+
+.secctit{
+    background-color: white;
+    text-align: center;
+    
+}
+.secctit img{
+    
+    width: 90%;
+    height: auto;
+    margin: 1em;
+    padding: 1em;
+    
+}
+.secctit h5{
+    line-height: 60px;
+    font-size: 40px;
+    text-transform: uppercase;
+    font-weight: bold;
+    color:black;
+    text-decoration: none;
+    font-family: 'Alegreya Sans SC', sans-serif;
+    display: block;
+    text-align: center;
+    
+}
+
+.secctit h6{
+    line-height: 30px;
+    text-transform: uppercase;
+    font-weight: bold;
+    color: #262626;
+    text-decoration: none;
+    font-family: 'Alegreya Sans SC', sans-serif;
+    display: block;
+    text-align: center;
+}
+
+#reiki h4,#masajes h6,#nat h4{
+    
+    line-height: 40px;
+    font-size: 25px;
+    text-transform: uppercase;
+    font-weight: bold;
+    color:black;
+    text-decoration: none;
+    font-family: 'Alegreya Sans SC', sans-serif;
+    display: block;
+    margin: 0.75em;
+    padding: 0.75em;
+    
+}
+
+#reiki p,#masajes p,#nat p,#biodanza p{
+    padding: 1em;
+    text-align: justify;
+    margin: 0.75em;
+    font-family: 'Alegreya Sans SC', sans-serif;
+    
+}
+
+#reiki h6, #nat h6{
+    text-align: left;
+    margin: 0.75em;
+    padding: 1em;
+    font-family: 'Alegreya Sans SC', sans-serif;
+    
+    
+}
+
+#biodanza{
     width: 100%;
     height: auto;
     margin-top: 50px;
     background-color: white;
     text-align: center;
+    
 }
-#desc img{
-    width: 50%;
-    height: auto;
-    margin: 90px 25% 0 25%;
-}
-#desc h4{
-    font-family: 'Comfortaa', cursive;
-    color: black;
-    margin: 1em;
-    margin-top: 5em;
-    padding: 10px;
-    text-align: center;
-}
+
+
 
 .nota{
     width: 90%;
@@ -134,6 +311,8 @@ header nav ul li a.active{
 }
 hr{
     width: 60%; 
+    height: 1px;
+    background-color:#7986CB; 
 }
 
 .btnimp{
@@ -166,8 +345,8 @@ hr{
 }
 
 .quote h2{
-    margin: 5% 20px 20px 20px;
-    padding: 40px;
+    margin: 1em;
+    padding: 1em;
     color: white;
     font-family: 'Comfortaa', cursive;
     font-size: 20px;
@@ -179,6 +358,7 @@ hr{
     font-family: 'Alegreya Sans SC', sans-serif;
     font-size: 20px;
     padding: 20px;
+    margin: 0.75em;
     
     
 }
@@ -188,6 +368,10 @@ hr{
     height: auto;
     background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
     text-align: center;
+    
+    
+    display: none;
+    
 }
 
 #taller ul{
@@ -235,52 +419,6 @@ hr{
     margin: 60px 0 60px 0;
     text-transform: uppercase;
     font-weight: bold; 
-   
-}
-
-.card{
-    background: white;
-    border: none;
-    margin: 0;
-    margin-bottom: 30px;
-    padding: 20px;
-    text-align: center;
-    width: 18rem;
-    height: 400px;
-    text-align: center;
-    border-radius: 0px;
-}
-.card i{
-    
-    font-size: 30px;
-    margin: 25px 0 20px 0;
-}
-.card ul{
-    list-style: none;
-    padding: 0;
-}
-.card-body{
-    width: 100%;
-    padding: 0px;
-}
-.card-body a{
-    color: #262626;
-    
-    
-}
-.card-body a:hover{
-    color: #5f72bd;
-    
-}
-.card-title{
-     line-height: 60px;
-    text-transform: uppercase;
-    font-weight: bold;
-    color: #262626;
-    text-decoration: none;
-    font-family: 'Alegreya Sans SC', sans-serif;
-    margin: 20px;
-    display: block;
    
 }
 
